# pytschirp

./: CMakeLists.txt  PyPropertySet.cpp  PyPropertySet.h  PyTschirp-sequential-rev2.cpp  PyTschirp.h  PyTschirpAttribute.cpp  PyTschirpAttribute.h  PyTschirpPatch.cpp  PyTschirpPatch.h  PyTschirpSynth.cpp  PyTschirpSynth.h  README.md  embedded_module.cpp  embedded_module.h  pytschirp.cpp  test.cpp  test.py
